--- a/Cultura_indígena.html
+++ b/Cultura_indígena.html
@@ -7,7 +7,7 @@
   </head>
   <body>
     <nav class="navbar"><!--Barra con botones--> <ul><!--lista-->
-       <li><button class="btn-nav"><a href="ejerccio_1.html" class="a">inicio</a></button></li>
+       <li><button class="btn-nav"><a href="index.html" class="a">inicio</a></button></li>
       </ul>
 </nav>
 <nav class="Cultura_indígena.html">
@@ -47,3 +47,4 @@ Alebrijes de Oaxaca, textiles de Chiapas, cerámica de Mata Ortiz, máscaras tra
 </nav>
 </body>
 </html>
+
