Cultura_inmaterial.html

--- a/Cultura_inmaterial.html
+++ b/Cultura_inmaterial.html
@@ -7,7 +7,7 @@
   </head>
   <body>
     <nav class="navbar"><!--Barra con botones--> <ul><!--lista-->
-       <li><button class="btn-nav"><a href="ejerccio_1.html" class="a"> inicio</a></button></li>
+       <li><button class="btn-nav"><a href="index.html" class="a"> inicio</a></button></li>
       </ul>
 </nav>
     <nav class="Cultura_inmaterial.html">
@@ -47,3 +47,4 @@ La comida mexicana es Patrimonio Cultural Inmaterial de la Humanidad. No se trat
     </nav>
   </body>
 </html>
+
