--- a/Cultura_material.html
+++ b/Cultura_material.html
@@ -7,7 +7,7 @@
   </head>
   <body>
     <nav class="navbar"><!--Barra con botones--> <ul><!--lista-->
-       <li><button class="btn-nav"><a href="ejerccio_1.html" class="a">inicio</a></button></li>
+       <li><button class="btn-nav"><a href="index.html" class="a">inicio</a></button></li>
       </ul>
 </nav>
     <nav class="Cultura_material.html">
@@ -48,3 +48,4 @@ Metate, molcajete, comales de barro, instrumentos musicales (marimba, guitarrón
     </nav>
   </body>
 </html>
+
