--- a/Cultura_mestiza.html
+++ b/Cultura_mestiza.html
@@ -7,7 +7,7 @@
   </head>
   <body>
     <nav class="navbar"><!--Barra con botones--> <ul><!--lista-->
-       <li><button class="btn-nav"><a href="ejerccio_1.html" class="a">inicio</a></button></li>
+       <li><button class="btn-nav"><a href="index.html" class="a">inicio</a></button></li>
       </ul>
 </nav>
 <nav class="Cultura_mestiza.html">
@@ -45,4 +45,5 @@ Día de Muertos, danzas mestizas, arquitectura colonial con mano indígena.
   </article>
 </nav>
 </body>
+
 </html>
