Cultura_popular_y_moderna.html

--- a/Cultura_popular_y_moderna.html
+++ b/Cultura_popular_y_moderna.html
@@ -7,7 +7,7 @@
   </head>
   <body>
     <nav class="navbar"><!--Barra con botones--> <ul><!--lista-->
-       <li><button class="btn-nav"><a href="ejerccio_1.html" class="a">inicio</a></button></li>
+       <li><button class="btn-nav"><a href="index.html" class="a">inicio</a></button></li>
       </ul>
 </nav>
 <nav class="Cultura_popular_y_moderna.html">
@@ -46,3 +46,4 @@ Telenovelas, influencers, moda urbana, redes sociales.
 </nav>
 </body>
 </html>
+
